feat: added register and login pages

--- a/src/IdentityService/Pages/Account/AccessDenied.cshtml
+++ b/src/IdentityService/Pages/Account/AccessDenied.cshtml
@@ -1,7 +1,6 @@
 @page
-@model IdentityService.Pages.Account.AccessDeniedModel
-@{
-}
+@model IdentityService.Pages.Account.AccessDenied
+
 <div class="row">
     <div class="col">
         <h1>Access Denied</h1>
